--- a/src/app/Componentes/Loja/formulario-loja/formulario-loja.component.html
+++ b/src/app/Componentes/Loja/formulario-loja/formulario-loja.component.html
@@ -2,19 +2,19 @@
   <div class="title">
     <h1>{{ btnTitulo }}</h1>
   </div>
-  <form [formGroup]="lojaForm" (ngSubmit)="submitFunction()" #formDit="ngForm">
+  <form [formGroup]="lojaForm" (ngSubmit)="submitFunction()" #formDit="ngForm" class="form-container">
     <input type="hidden" formControlName="idloja">
-    <div>
+    <div class="form-group">
       <label>Nome: </label>
-      <input type="text" formControlName="nome">
+      <input type="text" formControlName="nome" class="form-control">
     </div>
-    <div>
+    <div class="form-group">
       <label>CNPJ: </label>
-      <input type="text" formControlName="cnpj">
+      <input type="text" formControlName="cnpj" class="form-control">
     </div>
-    <div>
-      <button [disabled]="!lojaForm.valid" type="submit">{{ btnAcao }}</button>
-      <button (click)="btnRedirect($event, 'loja')">Voltar</button>
+    <div class="form-actions">
+      <button class="btn btn-primary" [disabled]="!lojaForm.valid" type="submit">{{ btnAcao }}</button>
+      <button class="btn btn-secondary" (click)="btnRedirect($event, 'loja')">Voltar</button>
     </div>
   </form>
 </div>
