--- a/src/app/Componentes/Produto/produto/produto.component.scss
+++ b/src/app/Componentes/Produto/produto/produto.component.scss
@@ -1,19 +1,115 @@
-.container{
-  .title{
-    margin-top: 5rem;
-  }
+// Importando o arquivo de variáveis globais
+@import '../../../../styles.scss';
 
-  .actions-container{
-    margin-top: 3rem;
-    display: flex;
-    flex-direction: row;
-    .form-control{
-      width: 40rem;
-      margin-left: 2rem;
+.container {
+  .title {
+    margin-top: 5rem;
+    h2 {
+      color: $primary-color;
     }
   }
 
-  .tabela-produto{
+  .actions-container {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    .cadastrar {
+      background-color: $primary-color;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 0.25rem;
+      cursor: pointer;
+
+      &:hover {
+        background-color: darken($primary-color, 10%);
+      }
+    }
+
+    .form-control {
+      width: 40rem;
+      margin-left: 2rem;
+      border: 1px solid $secondary-color;
+      border-radius: 0.25rem;
+      padding: 0.5rem;
+
+      &:focus {
+        border-color: $primary-color;
+        box-shadow: 0 0 5px rgba($primary-color, 0.5);
+      }
+    }
+  }
+
+  .tabela-produto {
     margin-top: 2rem;
+
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+
+      thead {
+        background-color: $light-bg-color;
+
+        th {
+          color: $dark-text-color;
+          text-align: left;
+          padding: 1rem;
+          border-bottom: 2px solid $secondary-color;
+        }
+      }
+
+      tbody {
+        tr {
+          &:nth-child(even) {
+            background-color: lighten($light-bg-color, 10%);
+          }
+
+          td {
+            padding: 1rem;
+            border-bottom: 1px solid $secondary-color;
+
+            &.btn-action {
+              text-align: right;
+
+              .btn {
+                &.btn-primary {
+                  background-color: $primary-color;
+                  border: none;
+
+                  &:hover {
+                    background-color: darken($primary-color, 10%);
+                  }
+                }
+
+                &.btn-danger {
+                  background-color: #dc3545;
+                  border: none;
+
+                  &:hover {
+                    background-color: darken(#dc3545, 10%);
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  button {
+    background-color: $secondary-color;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    cursor: pointer;
+
+    &:hover {
+      background-color: darken($secondary-color, 10%);
+    }
   }
 }
