--- a/src/app/Componentes/ProdutosLoja/cadastro-produto-loja/cadastro-produto-loja.component.html
+++ b/src/app/Componentes/ProdutosLoja/cadastro-produto-loja/cadastro-produto-loja.component.html
@@ -6,22 +6,22 @@
   </div>
   <form [formGroup]="produtoLojaForm" (ngSubmit)="submit()" #formDit="ngForm">
     <input type="hidden" formControlName="idprodutoloja">
-    <div>
+    <div class="form-group">
       <label>Produto: </label>
-      <select formControlName="idproduto">
+      <select formControlName="idproduto" class="form-control">
         @for(item of produtos; track item.idproduto){
           <option value="{{ item.idproduto }}">{{ item.nomeproduto }}</option>
         }
       </select>
     </div>
-    <div>
+    <div class="form-group">
       <label>Quantidade: </label>
-      <input type="number" formControlName="quantidade_produto">
+      <input type="number" formControlName="quantidade_produto" class="form-control">
     </div>
     <input type="hidden" formControlName="idloja">
-    <div>
-      <button [disabled]="!produtoLojaForm.valid" (click)="cadastroProdutoLoja()" type="submit">Cadastrar produto na loja {{ loja.nome }}</button>
-      <button (click)="btnRedirect($event, 'produtosLoja/loja/' + loja.idloja)">Voltar</button>
+    <div class="form-actions">
+      <button class="btn btn-primary" [disabled]="!produtoLojaForm.valid" (click)="cadastroProdutoLoja()" type="submit">Cadastrar produto na loja {{ loja.nome }}</button>
+      <button class="btn btn-secondary" (click)="btnRedirect($event, 'produtosLoja/loja/' + loja.idloja)">Voltar</button>
     </div>
   </form>
 }
