--- a/src/app/Componentes/ProdutosLoja/produtos-loja/produtos-loja.component.scss
+++ b/src/app/Componentes/ProdutosLoja/produtos-loja/produtos-loja.component.scss
@@ -1,23 +1,102 @@
-.container{
-  .title{
-    margin-top: 5rem;
-  }
+@import '../../../../styles.scss';
 
-  .actions-container{
-    margin-top: 3rem;
-    display: flex;
-    flex-direction: row;
-    .form-control{
-      width: 40rem;
-      margin-left: 2rem;
+.container {
+  .title {
+    margin-top: 2rem;
+    text-align: center;
+
+    h2 {
+      color: $primary-color;
+      font-size: 1.75rem;
     }
   }
 
-  .tabela-loja{
+  .actions-container {
     margin-top: 2rem;
-  }
-}
+    display: flex;
+    justify-content: space-between;
 
-.stepper{
-  width: 400rem;
+    .btn {
+      padding: 0.5rem 1rem;
+      border-radius: 0.25rem;
+      font-size: 1rem;
+      cursor: pointer;
+
+      &.btn-primary {
+        background-color: $primary-color;
+        color: white;
+
+        &:hover {
+          background-color: darken($primary-color, 10%);
+        }
+      }
+
+      &.btn-secondary {
+        background-color: $secondary-color;
+        color: white;
+
+        &:hover {
+          background-color: darken($secondary-color, 10%);
+        }
+      }
+    }
+
+    .print-buttons {
+      display: flex;
+      gap: 0.5rem; /* Ajuste o espaçamento entre os botões de imprimir */
+    }
+  }
+
+  .tabela-loja {
+    margin-top: 2rem;
+    overflow-x: auto;
+
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+
+      th,
+      td {
+        padding: 0.75rem;
+        border: 1px solid #ddd;
+        text-align: left;
+        white-space: nowrap;
+
+        &:nth-child(2) {
+          text-align: right;
+        }
+      }
+
+      thead th {
+        background-color: $primary-color;
+        color: white;
+        text-transform: uppercase;
+      }
+
+      tbody tr:nth-child(even) {
+        background-color: #f9f9f9;
+      }
+
+      .btn-action {
+        display: flex;
+        justify-content: flex-end;
+
+        .btn {
+          margin-right: 0.5rem;
+
+          &:last-child {
+            margin-right: 0;
+          }
+
+          &.btn-danger img {
+            vertical-align: middle;
+          }
+        }
+      }
+    }
+  }
+
+  .stepper {
+    width: 100%;
+  }
 }
