--- a/src/app/Componentes/Tamanho/formulario-tamanho/formulario-tamanho.component.html
+++ b/src/app/Componentes/Tamanho/formulario-tamanho/formulario-tamanho.component.html
@@ -2,15 +2,15 @@
   <div class="title">
     <h1>{{ btnTitulo }}</h1>
   </div>
-  <form [formGroup]="tamanhoForm" (ngSubmit)="submitFunction()" #formDit="ngForm">
+  <form [formGroup]="tamanhoForm" (ngSubmit)="submitFunction()" #formDit="ngForm" class="form-container">
     <input type="hidden" formControlName="idtamanho">
-    <div>
+    <div class="form-group">
       <label>Nome: </label>
-      <input type="text" formControlName="nome">
+      <input type="text" formControlName="nome" class="form-control">
     </div>
-    <div>
-      <button [disabled]="!tamanhoForm.valid" type="submit">{{ btnAcao }}</button>
-      <button (click)="btnRedirect($event, 'tamanho')">Voltar</button>
+    <div class="form-actions">
+      <button class="btn btn-primary" [disabled]="!tamanhoForm.valid" type="submit">{{ btnAcao }}</button>
+      <button class="btn btn-secondary" (click)="btnRedirect($event, 'tamanho')">Voltar</button>
     </div>
   </form>
 </div>
