--- a/src/app/Componentes/Venda/CadastroVenda/cadastro-venda/cadastro-venda.component.scss
+++ b/src/app/Componentes/Venda/CadastroVenda/cadastro-venda/cadastro-venda.component.scss
@@ -1,3 +1,103 @@
-.container{
+@import '../../../../../styles.scss';
+
+.container {
   margin-top: 5rem;
+
+  .title {
+    text-align: center;
+    margin-bottom: 2rem;
+
+    h1 {
+      color: $primary-color;
+      font-size: 2rem;
+    }
+  }
+
+  .form-group {
+    margin-bottom: 1rem;
+
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: bold;
+    }
+
+    .form-control {
+      width: 100%;
+      padding: 0.5rem;
+      border-radius: 0.25rem;
+      border: 1px solid #ccc;
+    }
+  }
+
+  .form-actions {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+
+    .btn {
+      padding: 0.5rem 1rem;
+      border-radius: 0.25rem;
+      font-size: 1rem;
+      cursor: pointer;
+
+      &.btn-primary {
+        background-color: $primary-color;
+        color: white;
+
+        &:hover {
+          background-color: darken($primary-color, 10%);
+        }
+      }
+
+      &.btn-secondary {
+        background-color: $secondary-color;
+        color: white;
+
+        &:hover {
+          background-color: darken($secondary-color, 10%);
+        }
+      }
+
+      &.btn-danger {
+        background-color: red;
+        color: white;
+
+        &:hover {
+          background-color: darken(red, 10%);
+        }
+      }
+
+      &.btn-success {
+        background-color: green;
+        color: white;
+
+        &:hover {
+          background-color: darken(green, 10%);
+        }
+      }
+    }
+  }
+
+  .table {
+    width: 100%;
+    border-collapse: collapse;
+
+    thead {
+      background-color: #f8f9fa;
+      th {
+        padding: 0.5rem;
+        text-align: left;
+      }
+    }
+
+    tbody {
+      tr {
+        td {
+          padding: 0.5rem;
+        }
+      }
+    }
+  }
 }
+
