--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<div class="header">
+  <a href="">Home</a>
+  <a href="" (click)="btnRedirect($event, 'produto')">Produtos</a>
+  <a href="" (click)="btnRedirect($event, 'categoria')">Categoria</a>
+  <a href="" (click)="btnRedirect($event, 'tamanho')">Tamanho</a>
+  <a href="" (click)="btnRedirect($event, 'marca')">Marca</a>
+  <a href="" (click)="btnRedirect($event, 'loja')">Loja</a>
+</div>
+
 <router-outlet />
