--- a/src/app/Componentes/home/home.component.html
+++ b/src/app/Componentes/home/home.component.html
@@ -3,8 +3,8 @@
   <mat-form-field>
     <mat-label>Escolha um período de data</mat-label>
     <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-      <input matStartDate formControlName="start" placeholder="Start date">
-      <input matEndDate formControlName="end" placeholder="End date">
+      <input matStartDate formControlName="start" placeholder="Data de início">
+      <input matEndDate formControlName="end" placeholder="Data final">
     </mat-date-range-input>
     <mat-hint>{{range.value.start | date : 'd/MM/yy'}} – {{range.value.end | date : 'd/MM/yy'}}</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
