--- a/src/app/Componentes/ProdutosLoja/produtos-loja/produtos-loja.component.scss
+++ b/src/app/Componentes/ProdutosLoja/produtos-loja/produtos-loja.component.scss
@@ -100,3 +100,14 @@
     width: 100%;
   }
 }
+
+@media print {
+  .no-print {
+    display: none !important;
+  }
+
+  .tabela-loja{
+    padding: 5rem;
+  }
+}
+
