--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <a href="" (click)="btnRedirect($event, 'tamanho')">Tamanho</a>
   <a href="" (click)="btnRedirect($event, 'marca')">Marca</a>
   <a href="" (click)="btnRedirect($event, 'loja')">Loja</a>
+  <a href="" (click)="btnRedirect($event, 'reports')">Reports</a>
 </div>
 
 <router-outlet />
